Cambios home responsive

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -15,7 +15,7 @@
           <div class="col-12">
             <div class="card-columns">
               <!--Card 1-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Recursos Humanos'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Recursos Humanos'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
@@ -35,7 +35,7 @@
                 </div>
               </div>
               <!--Card 2-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Ventas'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Ventas'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/box.svg" width="40" height="40" alt="handShake"
@@ -50,7 +50,7 @@
                 </div>
               </div>
               <!--Card 3-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Finanzas'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Finanzas'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <!--Card 4-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Despacho'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Despacho'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
@@ -77,7 +77,7 @@
                 </div>
               </div>
               <!--Card 5-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Contabilidad'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Contabilidad'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
@@ -95,7 +95,7 @@
                 </div>
               </div>
               <!--Card 6-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Administrador'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Administrador'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
@@ -110,7 +110,7 @@
                 </div>
               </div>
               <!--Card 7-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Porteria'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Porteria'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
@@ -124,7 +124,7 @@
                 </div>
               </div>
               <!--Card 8-->
-              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Facturacion'">
+              <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Facturacion'">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
