--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -16,13 +16,8 @@
 }
 
 .card{
-    border: none;
-    border-radius: 0 !important;
-    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
-    margin-left: 1px;
-    margin-right: 1px;
+    display: inline-block;
+    width: 100%;
 }
 .list-group-item{
     background: transparent;
@@ -41,7 +36,6 @@
 .scrollable{
     overflow-y: auto;
     height: 100%;
-    max-height: 80vh;
 }
 
 /*Scroll styles**************************************/
