--- a/src/app/Components/accounting/cronogram-accounting/cronogram-accounting.component.html
+++ b/src/app/Components/accounting/cronogram-accounting/cronogram-accounting.component.html
@@ -1,1 +1,10 @@
-<p>cronogram-accounting works!</p>
+<div id="mainContainer" class="container-fluid">
+  <div class="row my-4">
+      <h2 class="titles">Cronograma</h2>
+  </div>
+  <div class="row text-center">
+      <div class="col" style="height: 50vh;">
+          <full-calendar #calendar id="calendar" [options]="calendarOptions"></full-calendar>
+      </div>
+  </div>
+</div>
