--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -82,9 +82,9 @@
                   </picture>
                   <h3 id="titles" class="mt-2 titles">Contabilidad</h3>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/admin/create" >Crear Empleado</a></li>
-                    <li class="list-group-item titles"><a routerLink="/admin/search">Ver Empleados</a></li>
-                    <li class="list-group-item titles"><a routerLink="/admin/search" >Modificar</a></li>
+                    <li class="list-group-item titles"><a routerLink="/accounting/create" >Crear Empleado</a></li>
+                    <li class="list-group-item titles"><a routerLink="/accounting/allemployees">Ver Empleados</a></li>
+                    <li class="list-group-item titles"><a routerLink="/accounting/search" >Modificar</a></li>
                     <li class="list-group-item titles"><a routerLink="/accounting/request">Solicitud cliente</a> </li>
                     <li class="list-group-item titles"><a routerLink="/accounting/create">Crear Clientes</a> </li>
                     <li class="list-group-item titles"><a href="">Modificar Clientes</a> </li>
