--- a/src/app/Components/nav-bar/nav-bar.component.css
+++ b/src/app/Components/nav-bar/nav-bar.component.css
@@ -49,6 +49,10 @@
         margin-top: 10px;
         margin-left: 15px !important;
     }
+    #navbarNav{
+    z-index: 2;
+    background-color: white;
+    }
 }
 
 /*Nav bar styles ends*/
