--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -18,6 +18,7 @@
 .card{
     display: inline-block;
     width: 100%;
+    z-index: -1;
 }
 .list-group-item{
     background: transparent;
@@ -35,7 +36,7 @@
 
 .scrollable{
     overflow-y: auto;
-    height: 100%;
+    height: 100vh;
 }
 
 /*Scroll styles**************************************/
