--- a/src/app/Components/nav-bar/nav-bar.component.css
+++ b/src/app/Components/nav-bar/nav-bar.component.css
@@ -101,10 +101,22 @@ li.right {
     z-index: 2;
     margin-right: 1px;
     margin-top: 27px;
+    right: 10vw;
 }
 
 /******************************************/
 
 #nav{
     height: 10vh;
+}
+@media (max-width: 992px) {
+    #notificationMenu {
+        margin-top: 55px;
+        width: 80vw;
+    }
+}
+@media (min-width: 992px) {
+    #notificationMenu {
+        right: 1vw;
+    }
 }
