--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -32,9 +32,9 @@
                         <a (click)="logOut()" class="nav-link titles text-danger" href="#">Cerrar Sesión</a>
                     </li>
                 </ul>
-              
+
                 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-                <li class="right pl-3">                 
+                <li class="right pl-3">
                     <div class="dropdown-container">
                         <a href="#" data-dropdown="notificationMenu" class="menu-link has-notifications circle">
                             <img src="../../../assets/Iconos/notifications_none-24px.svg" class="img-fluid"
@@ -60,7 +60,7 @@
                 </li>
                 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
                 <picture>
-                    <img id="userLogo" src="../../../assets/Iconos/people.svg" width="45" height="45"
+                    <img id="userLogo" src="{{fotoUrl}}" width="45" height="45"
                         class="d-inline-block align-top mx-4" alt="" loading="lazy">
                 </picture>
             </div>
