--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -50,7 +50,7 @@
               <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Finanzas'">
                 <div class="card-body">
                   <picture>
-                    <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
+                    <img id="icons" src="../../../assets/Iconos/recompensa.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles">Tesoreria</h3>
@@ -95,13 +95,13 @@
               <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Administrador'">
                 <div class="card-body">
                   <picture>
-                    <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
+                    <img id="icons" src="../../../assets/Iconos/folder.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles card-title">Administracion</h3>
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/release/create">Crear Comunicado</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/release/create">Modificar Comunicado</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release/modify">Modificar Comunicado</a> </li>
                     <li class="list-group-item titles"><a routerLink="/release/report">Reportes</a> </li>
                   </ul>
                 </div>
@@ -124,7 +124,7 @@
               <div class="card  bg-secondary shadow" *ngIf="rol==='Administrador'|| rol === 'Facturacion'">
                 <div class="card-body">
                   <picture>
-                    <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
+                    <img id="icons" src="../../../assets/Iconos/recibo.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles card-title">Facturacion</h3>
@@ -148,27 +148,15 @@
             <div class="card bg-secondary mb-4">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                  <h1 class="titles">Politica de privacidad y uso de Datos</h1>
-                  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde
-                    inventore dolore
-                    voluptate nam delectus, nesciunt ab, architecto itaque? Quisquam numquam placeat nisi blanditiis
-                    deserunt! Mollitia, quibusdam quod? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias, beatae porro voluptatem vel velit amet minima laborum consectetur autem quas eligendi
-                    unde voluptatum atque ipsa, dolore iste impedit aliquam commodi!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis incidunt architecto atque
-                    cupiditate harum laboriosam sapiente nihil corrupti iure, neque cumque amet laudantium possimus,
-                    autem earum eligendi nulla dolor officia! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Corporis provident, nam nesciunt necessitatibus unde eligendi! Ducimus, aliquid aliquam sed
-                    praesentium exercitationem explicabo rem, placeat veniam, voluptatem culpa temporibus. Velit,
-                    facere!
-                  </p>
+                  <h1 class="titles">{{tituloComunicado}}</h1>
+                  <p class="text">{{descripcionComunicado}}</p>
                   <div class="continer-fluid">
                     <div class="row">
-                      <div class="col text-left text-muted">20 de Julio 2020</div>
+                      <div class="col text-left text-muted">{{fecha | date: 'dd/MM/yyyy'}}</div>
                       <div class="col text-right text-muted">Actualización de Myryam
                         Hernandez</div>
                     </div>
-                    <div class="row mt-3">
+                    <!-- <div class="row mt-3">
                       <div class="col">
                         <div class="row">
                           <div id="usersPic" class="col">
@@ -199,7 +187,7 @@
                       <div class="col">
                         <button type="button" class="btn btn-danger btn-block mt-2">Confirmar lectura</button>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </blockquote>
               </div>
