--- a/src/app/Pages/news/news.component.html
+++ b/src/app/Pages/news/news.component.html
@@ -6,10 +6,14 @@
           aria-controls="v-pills-home" aria-selected="true">
           <img src="../../../assets/Iconos/noun_Plus_1886659.svg" width="30" height="30" class="d-inline-block pr-2"
             alt="" loading="lazy"><span>Crear actualización</span></a>
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" routerLink="/release/create" role="tab"
+        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" routerLink="/release/modify" role="tab"
           aria-controls="v-pills-messages" aria-selected="false"><img
             src="../../../assets/Iconos/noun_Pencil_2135274.svg" width="30" height="30" class="d-inline-block pr-2"
             alt="" loading="lazy"> <span>Modificar Comunicado</span></a>
+            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" routerLink="/release/report" role="tab"
+          aria-controls="v-pills-messages" aria-selected="false"><img
+            src="../../../assets/Iconos/noun_Pencil_2135274.svg" width="30" height="30" class="d-inline-block pr-2"
+            alt="" loading="lazy"> <span>Reportes</span></a>
       </div>
     </div>
     <div class="col-10">
