Cambios imagens dentro de pedidos

--- a/src/app/Components/Orders/charge-order/charge-order.component.css
+++ b/src/app/Components/Orders/charge-order/charge-order.component.css
@@ -101,9 +101,6 @@
 .btnDisable{
   display: none;
 }
-#statusOrder {
-  z-index: -20;
-  position: absolute;
-  top: 60%;
-  left: 41%;
+#imagesCont {
+  margin-bottom: 15vh;
 }
