--- a/src/app/Components/Orders/charge-order/charge-order.component.html
+++ b/src/app/Components/Orders/charge-order/charge-order.component.html
@@ -46,8 +46,20 @@
 
     </div>
   </div>
+
   <div class="row d-flex justify-content-center align-middle ">
     <h1 id="statusOrder" class="img-thumbnail p-4 shadow titles">{{pedidos.status}}</h1>
+  </div>
+  <div id="imagesCont" class="row mt-4">
+    <div class="card-columns">
+      <div *ngFor="let image of imagesOrder" class="my-2">
+        <div class="card">
+          <div class="card-body">
+            <img src="{{image.foto}}" alt="" class="img-fluid rounded">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="fixed-bottom py-4 bg-white">
     <div class="container-fluid">
@@ -76,9 +88,12 @@
           </div>
           <div class="row">
             <div class="col text-center">
-              <button type="button" [ngClass]="{btnDisable: atras === false } " class="btn btn-danger text" (click)="Atras()">Atras</button>
-                <button type="submit" [ngClass]="{btnDisable: confirm === false } " class="btn btn-danger text" (click)="confirmar()">Confirmar</button>
-              <button type="button" [ngClass]="{btnDisable: continuar === false }" class="btn btn-danger text"  (click)="change()" [attr.disabled] = "btnDisable === false ? 'disabled' : null">{{nameBtn}}</button>
+              <button type="button" [ngClass]="{btnDisable: atras === false } " class="btn btn-danger text"
+                (click)="Atras()">Atras</button>
+              <button type="submit" [ngClass]="{btnDisable: confirm === false } " class="btn btn-danger text"
+                (click)="confirmar()">Confirmar</button>
+              <button type="button" [ngClass]="{btnDisable: continuar === false }" class="btn btn-danger text"
+                (click)="change()" [attr.disabled]="btnDisable === false ? 'disabled' : null">{{nameBtn}}</button>
             </div>
           </div>
         </div>
