--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -42,7 +42,7 @@
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/orders/client">Crear Pedidos</a> </li>
                     <li class="list-group-item titles"><a routerLink="/orders/search">Ver Pedido</a> </li>
-                    <li class="list-group-item titles"><a href="/orders/search">Eliminar</a> </li>
+                    <li class="list-group-item titles"><a href="/orders/delete">Eliminar</a> </li>
                   </ul>
                 </div>
               </div>
