--- a/src/app/Pages/orders/orders.component.html
+++ b/src/app/Pages/orders/orders.component.html
@@ -12,7 +12,7 @@
           <img src="../../../assets/Iconos/noun_Eye_1853787.svg" width="30" height="30" class="d-inline-block pr-2"
             alt="" loading="lazy"> <span>Ver
             pedido</span></a>
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" routerLink="/orders/search" role="tab"
+        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" routerLink="/orders/delete" role="tab"
           aria-controls="v-pills-messages" aria-selected="false"><img
             src="../../../assets/Iconos/noun_Pencil_2135274.svg" width="30" height="30" class="d-inline-block pr-2"
             alt="" loading="lazy"> <span>Eliminar</span></a>
