--- a/src/app/Components/Employee/charge-employee/charge-employee.component.html
+++ b/src/app/Components/Employee/charge-employee/charge-employee.component.html
@@ -73,13 +73,13 @@
                           placeholder="Password" formControlName="password" [class.is-invalid]="passwordNoValido"
                           [class.is-valid]="passwordValido">
                   </div> -->
-                  <div class="form-group mb-4 px-5">
+                  <!-- <div class="form-group mb-4 px-5">
                       <label for="exampleFormControlFile1" class="titles">Ingresar foto
                           empleado</label>
                       <input type="file" class="form-control titles-file titles text-wrap" formControlName="photoFile"
                           (change)="handleFileInput($event.target.files)" [class.is-invalid]="photoFiledNoValido"
                           [class.is-valid]="photoFileValido">
-                  </div>
+                  </div> -->
                   <!-- Modulos disponibles
                   <div class="px-5" formArrayName="modulos">
                       <div class="form-check form-check-inline"
