--- a/src/app/Components/Employee/search-employee/search-employee.component.html
+++ b/src/app/Components/Employee/search-employee/search-employee.component.html
@@ -8,7 +8,7 @@
                 <form (ngSubmit)="searchClient()" class="px-3 py-3">
                     <h1 id="titleCreateEmployee" class="titles">Empleado</h1>
                     <div class="form-group row">
-                        <label for="staticEmail" class="col-sm-2 col-form-label text">CC:</label>
+                        <label for="staticEmail" class="col-sm-2 col-form-label text">Id:</label>
                         <div class="col-sm-10">
                             <input type="number" class="form-control text" [(ngModel)]="id" name="id" id="staticEmail" placeholder="XX.XXX.XXX">
                         </div>
