--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -87,7 +87,7 @@
                     <li class="list-group-item titles"><a routerLink="/accounting/search" >Modificar</a></li>
                     <li class="list-group-item titles"><a routerLink="/accounting/request">Solicitud cliente</a> </li>
                     <li class="list-group-item titles"><a routerLink="/accounting/create">Crear Clientes</a> </li>
-                    <li class="list-group-item titles"><a href="">Modificar Clientes</a> </li>
+                    <!-- <li class="list-group-item titles"><a href="">Modificar Clientes</a> </li> -->
                   </ul>
                 </div>
               </div>
