--- a/src/app/Components/Orders/reports/reports.component.html
+++ b/src/app/Components/Orders/reports/reports.component.html
@@ -1,6 +1,6 @@
 <div id="mainContainer" class="container-fluid">
   <div class="row my-4">
-    <h2 class="titles">Montar pedido</h2>
+    <h2 class="titles">Reportes</h2>
   </div>
   <div class="row text-center">
     <div class="col">
