--- a/src/app/Pages/delivery/delivery.component.html
+++ b/src/app/Pages/delivery/delivery.component.html
@@ -12,7 +12,7 @@
             alt="" loading="lazy"> <span>Buscar pedido</span></a>
       </div>
     </div>
-    <div class="col-10">
+    <div id="col10Table" class="col-10">
       <div class="tab-content" id="v-pills-tabContent">
         <router-outlet></router-outlet>
       </div>
