--- a/src/app/Components/Employee/create-employee/create-employee.component.html
+++ b/src/app/Components/Employee/create-employee/create-employee.component.html
@@ -59,7 +59,7 @@
                             <option value="Finanzas">Finanzas</option>
                             <option value="Porteria">Portería</option>
                             <option value="Despacho">Despacho</option>
-                            <option value="Recursos Humanos">Recursos Humanos</option>
+                            <option value="Recursos Humanos">Asistente Comercial</option>
                             <option value="Facturacion">Facturacion</option>
                             Facturacion
                         </select>
