--- a/src/app/Components/delivery/photography/photography.component.css
+++ b/src/app/Components/delivery/photography/photography.component.css
@@ -171,3 +171,18 @@
   margin-top:2rem;
   margin-bottom: 10%;
 }
+
+@media (max-width: 600px) {
+  #TablePhotography{
+    overflow: auto;
+  }
+  #cupload{
+    overflow: auto;
+  }
+  #upload{
+    width: 100%;
+    height: 100%;
+    float: center;
+    margin-left: 10%;
+  }
+}
