--- a/src/app/Components/delivery/photography/photography.component.html
+++ b/src/app/Components/delivery/photography/photography.component.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div class="row text-center">
+  <div id="TablePhotography" class="row text-center">
     <div class="col">
       <table id="orderTable" class="table table-hover">
         <thead>
