--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,51 +1,51 @@
-<div *ngIf="!(router.url == '/login' || router.url == '/')" class="row">
-    <div id="containerNav" class="col-lg-12">
-        <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand px-5 py-2"routerLink="/home">
-                <img src="../../../assets/Logo.png" width="100" height="ms-auto" class="d-inline-block align-top" alt=""
-                    loading="lazy">
+<div *ngIf="!(router.url == '/login' || router.url == '/' || router.url.startsWith('/seguimiento')) " class="row">
+  <div id="containerNav" class="col-lg-12">
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand px-5 py-2" routerLink="/home">
+        <img src="../../../assets/Logo.png" width="100" height="ms-auto" class="d-inline-block align-top" alt=""
+          loading="lazy">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+
+        </ul>
+
+        <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+        <li class="right pl-3">
+          <div class="dropdown-container">
+            <a href="#" data-dropdown="notificationMenu" class="menu-link has-notifications circle">
+              <img src="../../../assets/Iconos/notifications_none-24px.svg" class="img-fluid"
+                alt="puede contener una campana">
+              <span *ngIf="notificationAmount>=1" id="amountNotification"
+                class="rounded-circle">{{notificationAmount}}</span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mr-auto">
-
-                </ul>
-
-                <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-                <li class="right pl-3">
-                    <div class="dropdown-container">
-                        <a href="#" data-dropdown="notificationMenu" class="menu-link has-notifications circle">
-                            <img src="../../../assets/Iconos/notifications_none-24px.svg" class="img-fluid"
-                                alt="puede contener una campana">
-                            <span *ngIf="notificationAmount>=1" id="amountNotification"
-                                class="rounded-circle">{{notificationAmount}}</span>
-                        </a>
-                        <ul class="dropdown" id="test" name="notificationMenu" id="notificationMenu">
-                            <li class="notification-group">
-                                <div>
-                                    <ul class="list-group list-group-flush">
-                                        <li *ngFor="let item of notificationData; index as i;"
-                                            class="list-group-item d-flex justify-content-between align-items-center">
-                                            {{item.body}}
-                                            <span class="badge badge-danger badge-pill">1</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!-- tab -->
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-                <picture>
-                    <img id="userLogo" src="{{fotoUrl}}" width="45" height="45" class="d-inline-block align-top ml-4"
-                        alt="" loading="lazy">
-                </picture>
-                <a (click)="logOut()" class="nav-link titles text-danger" href="#">Cerrar Sesión</a>
-            </div>
-        </nav>
-    </div>
+            <ul class="dropdown" id="test" name="notificationMenu" id="notificationMenu">
+              <li class="notification-group">
+                <div>
+                  <ul class="list-group list-group-flush">
+                    <li *ngFor="let item of notificationData; index as i;"
+                      class="list-group-item d-flex justify-content-between align-items-center">
+                      {{item.body}}
+                      <span class="badge badge-danger badge-pill">1</span>
+                    </li>
+                  </ul>
+                </div>
+                <!-- tab -->
+              </li>
+            </ul>
+          </div>
+        </li>
+        <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+        <picture>
+          <img id="userLogo" src="{{fotoUrl}}" width="45" height="45" class="d-inline-block align-top ml-4" alt=""
+            loading="lazy">
+        </picture>
+        <a (click)="logOut()" class="nav-link titles text-danger" href="#">Cerrar Sesión</a>
+      </div>
+    </nav>
+  </div>
 </div>
